--- a/ELVideoAppTTT/Base.lproj/Main.storyboard
+++ b/ELVideoAppTTT/Base.lproj/Main.storyboard
@@ -39,8 +39,15 @@
                                             <action selector="addVideoButtonDidTouchUpInside:" destination="BYZ-38-t0r" eventType="touchUpInside" id="kA7-V7-PE9"/>
                                         </connections>
                                     </button>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="WAb-Q8-w4r">
+                                        <rect key="frame" x="61" y="0.0" width="30" height="40"/>
+                                        <state key="normal" title="Lib."/>
+                                        <connections>
+                                            <segue destination="IWS-6n-Hvq" kind="presentation" id="gDd-c8-Xpx"/>
+                                        </connections>
+                                    </button>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="NeT-NK-NZX">
-                                        <rect key="frame" x="74" y="0.0" width="40" height="40"/>
+                                        <rect key="frame" x="112" y="0.0" width="40" height="40"/>
                                         <constraints>
                                             <constraint firstAttribute="width" constant="40" id="fRA-l6-7PN"/>
                                             <constraint firstAttribute="height" constant="40" id="mIR-2G-C3u"/>
@@ -51,7 +58,7 @@
                                         </connections>
                                     </button>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="bsk-e2-Vu9">
-                                        <rect key="frame" x="147.5" y="0.0" width="40" height="40"/>
+                                        <rect key="frame" x="173" y="0.0" width="40" height="40"/>
                                         <constraints>
                                             <constraint firstAttribute="width" constant="40" id="RUs-4h-AuQ"/>
                                             <constraint firstAttribute="height" constant="40" id="Zit-md-Hu9"/>
@@ -62,7 +69,7 @@
                                         </connections>
                                     </button>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="yfo-pb-8Y4">
-                                        <rect key="frame" x="221.5" y="0.0" width="40" height="40"/>
+                                        <rect key="frame" x="234" y="0.0" width="40" height="40"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="40" id="2H0-br-VZq"/>
                                             <constraint firstAttribute="width" constant="40" id="Rrp-uc-ae2"/>
@@ -330,6 +337,66 @@
                 <exit id="Njm-Uu-sK1" userLabel="Exit" sceneMemberID="exit"/>
             </objects>
             <point key="canvasLocation" x="927" y="134"/>
+        </scene>
+        <!--Photo Library Collection View Controller-->
+        <scene sceneID="ast-EZ-L45">
+            <objects>
+                <collectionViewController id="IWS-6n-Hvq" customClass="PhotoLibraryCollectionViewController" customModule="ELVideoAppTTT" customModuleProvider="target" sceneMemberID="viewController">
+                    <collectionView key="view" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" id="THA-Jr-yDn">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="jLW-32-Dtx">
+                            <size key="itemSize" width="110" height="110"/>
+                            <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                            <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                            <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                        </collectionViewFlowLayout>
+                        <cells>
+                            <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="fileCell" id="2aE-U1-Zby" customClass="FileCollectionViewCell" customModule="ELVideoAppTTT" customModuleProvider="target">
+                                <rect key="frame" x="0.0" y="0.0" width="110" height="110"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO">
+                                    <rect key="frame" x="0.0" y="0.0" width="110" height="110"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="uu9-4c-QWu">
+                                            <rect key="frame" x="0.0" y="0.0" width="110" height="110"/>
+                                        </imageView>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2cD-K5-401">
+                                            <rect key="frame" x="68" y="89" width="42" height="21"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                            <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                    </subviews>
+                                </view>
+                                <constraints>
+                                    <constraint firstItem="uu9-4c-QWu" firstAttribute="top" secondItem="2aE-U1-Zby" secondAttribute="top" id="1AY-kV-aiR"/>
+                                    <constraint firstItem="uu9-4c-QWu" firstAttribute="leading" secondItem="2aE-U1-Zby" secondAttribute="leading" id="OXx-pD-n4E"/>
+                                    <constraint firstAttribute="trailing" secondItem="2cD-K5-401" secondAttribute="trailing" id="SMA-ji-F00"/>
+                                    <constraint firstAttribute="bottom" secondItem="uu9-4c-QWu" secondAttribute="bottom" id="bvo-ln-jLr"/>
+                                    <constraint firstAttribute="trailing" secondItem="uu9-4c-QWu" secondAttribute="trailing" id="fZA-HL-Top"/>
+                                    <constraint firstAttribute="bottom" secondItem="2cD-K5-401" secondAttribute="bottom" id="zSj-J5-oW8"/>
+                                </constraints>
+                                <connections>
+                                    <outlet property="imageView" destination="uu9-4c-QWu" id="ZXa-JR-z6m"/>
+                                    <outlet property="label" destination="2cD-K5-401" id="dhV-yK-HCC"/>
+                                </connections>
+                            </collectionViewCell>
+                        </cells>
+                        <connections>
+                            <outlet property="dataSource" destination="IWS-6n-Hvq" id="120-IW-StR"/>
+                            <outlet property="delegate" destination="IWS-6n-Hvq" id="29J-TU-win"/>
+                        </connections>
+                    </collectionView>
+                    <navigationItem key="navigationItem" id="DkZ-7l-ELY">
+                        <barButtonItem key="rightBarButtonItem" systemItem="done" id="jAa-Wr-Kp2"/>
+                    </navigationItem>
+                </collectionViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Ibx-8X-FWd" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="940" y="932"/>
         </scene>
         <!--Quick Look View Controller-->
         <scene sceneID="f0N-H1-GTu">
